--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,6 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: make run
-      run: make run -C Implementation/
- 
+    - name: get_avr-gcc
+      run: sudo apt-get install gcc-avr binutils-avr avr-libc
+    - name: Compile
+      run: make -C Implementation/
